--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/motion": "^2.1.0",
+    "axios": "^1.6.8",
+    "jwt-decode": "^4.0.0",
     "nuxt": "^3.10.3",
     "nuxt-icons": "^3.2.1",
     "nuxt-swiper": "^1.2.2",
